examples/aws/vpc-network.yaml
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: crossplane-route-public-igw
spec:
  forProvider:
    region: us-east-1
    routeTableIdRef:
      name: crossplane-rt-public
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdRef:
      name: crossplane-igw
  providerConfigRef:
    name: aws-provider
  deletionPolicy: Delete
